--- a/Selu383.SP24.Web/src/routes/home/navbar.css
+++ b/Selu383.SP24.Web/src/routes/home/navbar.css
@@ -7,6 +7,7 @@
     top: 0;
     left: 0;
     z-index: 1000; /* Ensures the navbar appears above other content */
+    background-color:#fcd34d;
   }
   
   .navbar-brand {
