--- a/Selu383.SP24.Web/src/routes/login/loginpage.css
+++ b/Selu383.SP24.Web/src/routes/login/loginpage.css
@@ -4,6 +4,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-image: url('https://wallpapers.com/images/high/elegant-and-luxurious-hotel-suite-interior-65jrbhrszibou187.webp');
+    background-size: auto;
   }
   
   .login-form {
