--- a/Selu383.SP24.Web/src/routes/login/loginpage.css
+++ b/Selu383.SP24.Web/src/routes/login/loginpage.css
@@ -4,8 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('https://wallpapers.com/images/high/elegant-and-luxurious-hotel-suite-interior-65jrbhrszibou187.webp');
-    background-size: auto;
+    background-color: #fcd34d;
   }
   
   .login-form {
@@ -52,5 +51,6 @@
     text-decoration: underline;
   }
   .perimeter-text {
-    color: white;
+    color: black;
   }
+  
